fixed all